<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_seller_label"
            style="@style/TextViewFormItemListLabel"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/label_seller"/>

        <TextView
            android:id="@+id/tv_seller"
            android:layout_toRightOf="@+id/tv_seller_label"
            android:layout_toEndOf="@+id/tv_seller_label"
            android:layout_alignTop="@+id/tv_seller_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/tv_count_label"
            style="@style/TextViewFormItemListLabel"
            android:layout_below="@+id/tv_seller_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/label_count_label"/>

        <TextView
            android:id="@+id/tv_count"
            android:layout_toRightOf="@+id/tv_count_label"
            android:layout_toEndOf="@+id/tv_count_label"
            android:layout_alignTop="@+id/tv_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/tv_data_label"
            style="@style/TextViewFormItemListLabel"
            android:layout_below="@+id/tv_count_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/label_data_label"/>

        <TextView
            android:id="@+id/tv_data"
            android:layout_toRightOf="@+id/tv_data_label"
            android:layout_toEndOf="@+id/tv_data_label"
            android:layout_alignTop="@+id/tv_data_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/tv_amount_label"
            style="@style/TextViewFormItemListLabel"
            android:layout_below="@+id/tv_data_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/amount_label"/>

        <TextView
            android:id="@+id/tv_amount"
            android:layout_toRightOf="@+id/tv_amount_label"
            android:layout_toEndOf="@+id/tv_amount_label"
            android:layout_alignTop="@+id/tv_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/tv_address_label"
            style="@style/TextViewFormItemListLabel"
            android:layout_below="@+id/tv_amount_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/address_label"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_toRightOf="@+id/tv_address_label"
            android:layout_toEndOf="@+id/tv_address_label"
            android:layout_alignTop="@+id/tv_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/tv_status_label"
            style="@style/TextViewFormItemListLabel"
            android:layout_below="@+id/tv_address_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/status_label"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_toRightOf="@+id/tv_status_label"
            android:layout_toEndOf="@+id/tv_status_label"
            android:layout_alignTop="@+id/tv_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorText"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>