<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_credit_card"
    style="@style/NestedScrollBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_weight="0.7"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewFormLabel"
                            android:text="@string/add_credit_card_number_label" />

                        <EditText
                            android:id="@+id/met_credit_card_number"
                            style="@style/EditTextFormField"
                            android:layout_width="match_parent"
                            android:background="@drawable/bg_form_field"
                            android:imeOptions="actionNext"
                            android:inputType="number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewFormLabel"
                            android:text="@string/add_credit_card_enterprise_label" />

                        <Spinner
                            android:id="@+id/sp_credit_card_enterprise"
                            style="@style/SpinnerForm"
                            android:entries="@array/credit_card_enterprise" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewFormLabel"
                        android:text="@string/add_credit_card_owner_name_label" />

                    <EditText
                        android:id="@+id/et_credit_card_owner_name"
                        style="@style/EditTextFormField"
                        android:layout_width="match_parent"
                        android:background="@drawable/bg_form_field"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewFormLabel"
                        android:text="@string/add_credit_card_owner_reg_number_label" />

                    <EditText
                        android:id="@+id/met_credit_card_owner_reg"
                        style="@style/EditTextFormField"
                        android:layout_width="match_parent"
                        android:background="@drawable/bg_form_field"
                        android:imeOptions="actionNext"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewFormLabel"
                            android:text="@string/add_credit_card_expiry_label" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="12dp"
                                android:layout_marginRight="12dp"
                                android:layout_weight="0.3"
                                android:orientation="vertical">

                                <TextView
                                    style="@style/TextViewFormLabel"
                                    android:text="@string/add_credit_card_expiry_month_label" />

                                <Spinner
                                    android:id="@+id/sp_credit_card_expiry_month"
                                    style="@style/SpinnerForm"
                                    android:entries="@array/months_number" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.7"
                                android:orientation="vertical">

                                <TextView
                                    style="@style/TextViewFormLabel"
                                    android:text="@string/add_credit_card_expiry_year_label" />

                                <EditText
                                    android:id="@+id/et_credit_card_expiry_year"
                                    style="@style/EditTextFormField"
                                    android:layout_width="match_parent"
                                    android:background="@drawable/bg_form_field"
                                    android:imeOptions="actionNext"
                                    android:inputType="number"
                                    android:maxLength="4" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@color/colorViewLine" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewFormLabel"
                            android:text="@string/add_credit_card_security_code_label" />

                        <EditText
                            android:id="@+id/et_credit_card_security_code"
                            style="@style/EditTextFormField"
                            android:layout_width="match_parent"
                            android:background="@drawable/bg_form_field"
                            android:imeOptions="actionDone"
                            android:inputType="number" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/bt_add_credit_card"
                    style="@style/ButtonForm"
                    android:layout_gravity="end"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/add_credit_card" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>